--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -30,6 +30,15 @@ MT-01
 
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-2">
+                                    <label for="parentOrganization[id]" class="bmd-label-static">
+                                        親組織
+                                    </label>
+                                    <select class="form-control" name="parentOrganization[id]"
+                                        id="parentOrganization[id]" style="width: 100%;">
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="name" class="bmd-label-static">
                                         名称
                                     </label>
@@ -47,13 +56,13 @@ MT-01
                             <thead class="text-primary">
                                 <tr>
                                     <th>コード</th>
+                                    <th>親組織</th>
                                     <th>名称</th>
                                     <th>電話番号</th>
                                     <th>URL</th>
-                                    <th>販売条件</th>
                                     <th>ルーム</th>
                                     <th>POS</th>
-                                    <th>親組織</th>
+                                    <th>販売条件</th>
                                     <th>追加特性</th>
                                 </tr>
                             </thead>
@@ -65,16 +74,12 @@ MT-01
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i>
                                         </a>
                                     </td>
+                                    <td name="parentOrganizationName"">$parentOrganizationName$</td>
                                     <td name="name.ja|slice">$name.ja$</td>
                                     <td name="telephone">$telephone$</td>
                                     <td name="url__url|slice">
                                         <a target="_blank" href="$url$">$url$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
-                                    </td>
-                                    <td
-                                        name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
-                                        $offers.eligibleQuantity.maxValue$ 席まで
-                                        $availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
                                     </td>
                                     <td name="id" class="">
                                         <a href="javascript:void(0)" class="showContainsPlace" data-id="$id$">
@@ -86,7 +91,11 @@ MT-01
                                             <span>$posCount$</span>
                                         </a>
                                     </td>
-                                    <td name="parentOrganizationName"">$parentOrganizationName$</td>
+                                    <td
+                                        name="offers.eligibleQuantity.maxValue__availabilityStartsGraceTimeInDays__availabilityEndsGraceTimeInMinutes">
+                                        $offers.eligibleQuantity.maxValue$ 席まで
+                                        $availabilityStartsGraceTimeInDays$日前から$availabilityEndsGraceTimeInMinutes$まで販売
+                                    </td>
                                     <td name="id__additionalProperty" class="">
                                         <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
                                             <span>表示</span>
