--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -39,6 +39,14 @@ MT-01
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
+                                    <label for="branchCode[$regex]" class="bmd-label-static">
+                                        コード
+                                    </label>
+                                    <input class="form-control" name="branchCode[$regex]" id="branchCode[$regex]"
+                                        placeholder="" maxlength="64">
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="name" class="bmd-label-static">
                                         名称
                                     </label>
