### Changed - 販売者にbranchCodeを追加

--- a/views/sellers/_dataTables.ejs
+++ b/views/sellers/_dataTables.ejs
@@ -24,6 +24,7 @@
                     <thead class="text-primary">
                         <tr>
                             <th>ID</th>
+                            <th>枝番号</th>
                             <th>名称</th>
                             <th>Tel</th>
                             <th>URL</th>
@@ -41,6 +42,7 @@
                                     <i class=" material-icons" style="font-size: 1.2em;">open_in_new</i>
                                 </a>
                             </td>
+                            <td name="branchCode">$branchCode$</td>
                             <td name="name.ja">$name.ja$</td>
                             <td name="telephone">$telephone$</td>
                             <td name="url__url|slice">
