--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -229,6 +229,15 @@
                                                 </span>
                                             </label>
                                         </div>
+                                        <div class="form-check form-check-radio form-check-inline">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" type="radio" name="saleEndDateType"
+                                                    id="inlineRadio1" value="relative">相対
+                                                <span class="circle">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
+                                        </div>
                                     </div>
 
                                     <div class="form-inline d-none input-type" data-input-type="absolute">
@@ -236,6 +245,10 @@
                                             placeholder="YYYY/MM/DD" maxlength=10>&nbsp;&nbsp;
                                         <input name="saleEndTime" type="text" class="form-control timepicker"
                                             autocomplete="off" placeholder="HH:mm">
+                                    </div>
+                                    <div class="form-inline d-none input-type" data-input-type="relative">
+                                        <input type="text" class="form-control" name="saleEndDateRelative"
+                                            placeholder="開始日時からn分後" maxlength=10>
                                     </div>
                                 </div>
                             </div>
