--- a/views/transactions/registerService/start.ejs
+++ b/views/transactions/registerService/start.ejs
@@ -53,8 +53,8 @@ RT-00
 
                 <div class="form-group bmd-form-group col-md-3">
                     <label class="bmd-label-static" for="numSeats">アウトプット数</label>
-                    <input type="number" class="form-control" id="numOutputs" name="numOutputs" placeholder="2"
-                        value="">
+                    <input type="number" class="form-control" id="numOutputs" name="numOutputs" placeholder="2" value=""
+                        min="1" max="10">
                 </div>
 
             </div>
