- イベント作成時の販売終了日時の相対設定を負の値に対応

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -203,13 +203,21 @@
                                             autocomplete="off" placeholder="HH:mm">
                                     </div>
                                     <div class="form-inline d-none input-type" data-input-type="relative">
-                                        <input type="text" class="form-control" name="saleStartDateRelative"
+                                        <input type="number" class="form-control" name="saleStartDateRelative"
                                             placeholder="開催日からn日" maxlength=10>
                                     </div>
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-6">
-                                    <label class="bmd-label-static" for="saleEndDate">販売終了日時</label>
+                                    <label class="bmd-label-static" for="saleEndDate">販売終了日時
+                                        <a href="#" data-toggle="tooltip"
+                                            title="<p class=&quot;text-left mb-0&quot;>開始日時以前に対する相対設定をする場合、負の値を入力してください(15分前であれば、-15)</p>"
+                                            style="pointer-events: auto;">
+                                            <span class="material-icons" style="font-size: 1.2em;">
+                                                help
+                                            </span>
+                                        </a>
+                                    </label>
                                     <div class="checkbox-radios">
                                         <div class="form-check form-check-radio form-check-inline">
                                             <label class="form-check-label">
@@ -247,8 +255,8 @@
                                             autocomplete="off" placeholder="HH:mm">
                                     </div>
                                     <div class="form-inline d-none input-type" data-input-type="relative">
-                                        <input type="text" class="form-control" name="saleEndDateRelative"
-                                            placeholder="開始日時からn分後" maxlength=10>
+                                        <input type="number" class="form-control" name="saleEndDateRelative"
+                                            placeholder="開始日時からn分後" maxlength=10 max="4320">
                                     </div>
                                 </div>
                             </div>
