--- a/views/events/screeningEventSeries/add.ejs
+++ b/views/events/screeningEventSeries/add.ejs
@@ -11,5 +11,5 @@ Aa-2
 <form method="post" id="movie_product">
     <%- include('../../common/messages') %>
 
-    <%- include('form', { forms: forms }) %>
+    <%- include('form', { forms: forms, isNew: true }) %>
 </form>
