--- a/views/events/screeningEventSeries/edit.ejs
+++ b/views/events/screeningEventSeries/edit.ejs
@@ -12,5 +12,5 @@ Aa-2
     <input type="hidden" name="id" value="<%= forms.id %>">
     <%- include('../../common/messages') %>
 
-    <%- include('form', { forms: forms }) %>
+    <%- include('form', { forms: forms, isNew: false }) %>
 </form>
