--- a/views/priceSpecifications/form.ejs
+++ b/views/priceSpecifications/form.ejs
@@ -4,6 +4,10 @@
             <!--        Here you can write extra buttons/actions for the toolbar              -->
             <a class="btn btn-primary btn-ok" href="javascript:void(0)">
                 <i class="material-icons">save</i> 保存</a>
+            <% if (!isNew) { %>
+            <a class="btn btn-delete btn-danger" href="javascript:void(0)">
+                <i class="material-icons">delete</i> 削除</a>
+            <% } %>
         </div>
 
         <ul class="nav nav-pills nav-pills-dark mt-3" role="tablist">
@@ -35,6 +39,7 @@
                         <% const priceSpecificationType = priceSpecificationTypes.find((p) => p.codeValue === forms.typeOf) %>
                         <input class="form-control" disabled type="text"
                             value="<%= (priceSpecificationType !== undefined) ? priceSpecificationType.name : '' %>">
+                        <input type="hidden" name="id" value="<%= forms.id %>">
                         <input type="hidden" name="typeOf" value="<%= forms.typeOf %>">
                         <% } %>
                         <% if (errors && errors.typeOf) { %>
