--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -29,7 +29,7 @@ Aa-10
                             <%- include('../../common/master/_hidden') %>
 
                             <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-2">
+                                <div class="form-group bmd-form-group col-md-1">
                                     <label for="identifier" class="bmd-label-static">
                                         コード
                                     </label>
@@ -76,6 +76,24 @@ Aa-10
                                             <span class="input-group-text">以降</span>
                                         </div>
                                     </div>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-1">
+                                    <label for="contentRating[$eq]" class="bmd-label-static">
+                                        レイティング
+                                    </label>
+                                    <select class="form-control" name="contentRating[$eq]" id="contentRating[$eq]"
+                                        style="width: 100%;">
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-1">
+                                    <label for="distributor[codeValue][$eq]" class="bmd-label-static">
+                                        配給
+                                    </label>
+                                    <select class="form-control" name="distributor[codeValue][$eq]"
+                                        id="distributor[codeValue][$eq]" style="width: 100%;">
+                                    </select>
                                 </div>
                             </div>
                         </form>
