- 座席検索条件拡張 - オファーカタログ検索条件拡張

--- a/views/offerCatalogs/_dataTables.ejs
+++ b/views/offerCatalogs/_dataTables.ejs
@@ -37,6 +37,16 @@
                                 <% } %>
                             </select>
                         </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="itemOffered[serviceType][codeValue][$eq]" class="bmd-label-static">
+                                サービス区分
+                            </label>
+                            <select class="form-control" name="itemOffered[serviceType][codeValue][$eq]"
+                                id="itemOffered[serviceType][codeValue][$eq]" style="width: 100%;">
+                            </select>
+                        </div>
+
                     </div>
                 </form>
             </div>
