--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -71,6 +71,16 @@ ST-01
                                     </label>
                                     <input class="form-control" name="branchCode[$eq]">
                                 </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="seatingType[$eq]" class="bmd-label-static">
+                                        座席区分
+                                    </label>
+                                    <select class="form-control" name="seatingType[$eq]" id="seatingType[$eq]"
+                                        style="width: 100%;">
+                                    </select>
+                                </div>
+
                             </div>
                         </form>
                     </div>
