--- a/views/priceSpecifications/index.ejs
+++ b/views/priceSpecifications/index.ejs
@@ -53,17 +53,11 @@ PS-02
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-3">
-                                    <label for="appliesToMovieTicketType" class="bmd-label-static">
-                                        適用決済カード(ムビチケ券種)区分
+                                    <label for="appliesToMovieTicket" class="bmd-label-static">
+                                        適用決済カード区分
                                     </label>
-                                    <select class="form-control" name="appliesToMovieTicketType">
-                                        <option value="">選択してください</option>
-                                        <% Object.values(movieTicketTypes).forEach((movieTicketType) => { %>
-                                        <option value="<%= movieTicketType.codeValue %>">
-                                            <%= movieTicketType.paymentMethod.typeOf %> <%= movieTicketType.codeValue %>
-                                            <%= movieTicketType.name.ja %>
-                                        </option>
-                                        <% }) %>
+                                    <select class="form-control" name="appliesToMovieTicket" id="appliesToMovieTicket"
+                                        style="width: 100%;">
                                     </select>
                                 </div>
                             </div>
