- コンテンツ検索結果表示調整 - 施設コンテンツ検索結果表示調整

--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -125,8 +125,8 @@ Aa-3
                                     </td>
                                     <td name="startDate|date:YYYY-MM-DD HH:mm:ss">$startDate$</td>
                                     <td name="endDate|date:YYYY-MM-DD HH:mm:ss">$endDate$</td>
-                                    <td name="videoFormat.0.typeOf__videoFormat.1.typeOf__videoFormat.2.typeOf">
-                                        $videoFormat.0.typeOf$ $videoFormat.1.typeOf$ $videoFormat.2.typeOf$
+                                    <td name="videoFormatName">
+                                        $videoFormatName$
                                     </td>
                                     <td name="id__additionalProperty">
                                         <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
