--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -45,6 +45,24 @@ Aa-10
                                         value="">
                                 </div>
 
+                                <div class="form-group bmd-form-group col-md-1">
+                                    <label for="contentRating[$eq]" class="bmd-label-static">
+                                        レイティング
+                                    </label>
+                                    <select class="form-control" name="contentRating[$eq]" id="contentRating[$eq]"
+                                        style="width: 100%;">
+                                    </select>
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-1">
+                                    <label for="distributor[codeValue][$eq]" class="bmd-label-static">
+                                        配給
+                                    </label>
+                                    <select class="form-control" name="distributor[codeValue][$eq]"
+                                        id="distributor[codeValue][$eq]" style="width: 100%;">
+                                    </select>
+                                </div>
+
                                 <div class="form-group bmd-form-group col-md-4">
                                     <label for="datePublishedThrough" class="bmd-label-static">
                                         公開日(From - To)
@@ -76,24 +94,6 @@ Aa-10
                                             <span class="input-group-text">以降</span>
                                         </div>
                                     </div>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-1">
-                                    <label for="contentRating[$eq]" class="bmd-label-static">
-                                        レイティング
-                                    </label>
-                                    <select class="form-control" name="contentRating[$eq]" id="contentRating[$eq]"
-                                        style="width: 100%;">
-                                    </select>
-                                </div>
-
-                                <div class="form-group bmd-form-group col-md-1">
-                                    <label for="distributor[codeValue][$eq]" class="bmd-label-static">
-                                        配給
-                                    </label>
-                                    <select class="form-control" name="distributor[codeValue][$eq]"
-                                        id="distributor[codeValue][$eq]" style="width: 100%;">
-                                    </select>
                                 </div>
                             </div>
                         </form>
@@ -138,7 +138,7 @@ Aa-10
                                     <td name="name|slice:20">$name$</td>
                                     <td name="headline|slice:10">$headline$</td>
                                     <td name="duration|duration:minute">$duration$</td>
-                                    <td name="contentRating">$contentRating$</td>
+                                    <td name="contentRatingName">$contentRatingName$</td>
                                     <td name="distributorName">$distributorName$</td>
                                     <td name="datePublished|date:YYYY-MM-DD HH:mm:ss">$datePublished$</td>
                                     <td name="offers.availabilityEnds|date:YYYY-MM-DD HH:mm:ss">
