--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -23,20 +23,6 @@
                         </div>
 
                         <div class="form-group bmd-form-group col-md-1">
-                            <label for="category[codeValue]" class="bmd-label-static">
-                                カテゴリー
-                            </label>
-                            <select class="form-control" name="category[codeValue]">
-                                <option value="">---</option>
-                                <% ticketTypeCategories.forEach((category) => { %>
-                                <option value="<%= category.codeValue %>">
-                                    <%= category.name.ja %>
-                                </option>
-                                <% }) %>
-                            </select>
-                        </div>
-
-                        <div class="form-group bmd-form-group col-md-2">
                             <label for="identifier" class="bmd-label-static">
                                 コード
                             </label>
@@ -44,7 +30,7 @@
                                 maxlength=64>
                         </div>
 
-                        <div class="form-group bmd-form-group col-md-2">
+                        <div class="form-group bmd-form-group col-md-1">
                             <label for="name" class="bmd-label-static">
                                 名称
                             </label>
@@ -66,17 +52,17 @@
                                 </select>
 
                                 <div class="input-group-append">
-                                    <span class="input-group-text">枚あたり</span>
+                                    <span class="input-group-text">枚</span>
                                 </div>
 
-                                <input class="form-control" placeholder="" maxlength=10
+                                <input class="form-control" type="number" placeholder="" maxlength=10
                                     name="priceSpecification[minPrice]" id="priceSpecification[minPrice]" value="" />
 
                                 <div class="input-group-append">
                                     <span class="input-group-text">円以上</span>
                                 </div>
 
-                                <input class="form-control" placeholder="" maxlength=10
+                                <input class="form-control" type="number" placeholder="" maxlength=10
                                     name="priceSpecification[maxPrice]" id="priceSpecification[maxPrice]" value="" />
 
                                 <div class="input-group-append">
@@ -86,10 +72,39 @@
                         </div>
 
                         <div class="form-group bmd-form-group col-md-2">
+                            <label for="category[codeValue]" class="bmd-label-static">
+                                カテゴリー
+                            </label>
+                            <select class="form-control" name="category[codeValue]" id="category[codeValue]"
+                                style="width: 100%;">
+                            </select>
+                        </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
                             <label for="application" class="bmd-label-static">
                                 利用可能アプリ
                             </label>
                             <select class="form-control" name="application" id="application" style="width: 100%;">
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="appliesToMovieTicket" class="bmd-label-static">
+                                適用決済カード区分
+                            </label>
+                            <select class="form-control" name="appliesToMovieTicket" id="appliesToMovieTicket"
+                                style="width: 100%;">
+                            </select>
+                        </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="eligibleSeatingType" class="bmd-label-static">
+                                適用座席区分
+                            </label>
+                            <select class="form-control" name="eligibleSeatingType" id="eligibleSeatingType"
+                                style="width: 100%;">
                             </select>
                         </div>
                     </div>
@@ -105,14 +120,14 @@
                             <th></th>
                             <th>コード</th>
                             <th>アイテム</th>
-                            <th>カテゴリー</th>
                             <th>名称</th>
                             <th>発生金額</th>
                             <th>売上金額</th>
+                            <th>カテゴリー</th>
+                            <th>アプリ</th>
                             <th>有効性</th>
                             <th>アドオン</th>
                             <th>カタログ</th>
-                            <th>アプリ</th>
                             <th>追加特性</th>
                         </tr>
                     </thead>
@@ -131,16 +146,16 @@
                                 </a>
                             </td>
                             <td name="itemOfferedName">$itemOfferedName$</td>
-                            <td name="categoryName">$categoryName$</td>
                             <td name="alternateName.ja|slice">$alternateName.ja$</td>
-                            <td
-                                name="priceSpecification.price__priceSpecification.priceCurrency__priceSpecification.referenceQuantity.value__priceSpecification.referenceQuantity.unitCode">
-                                $priceSpecification.price$ $priceSpecification.priceCurrency$ /
-                                $priceSpecification.referenceQuantity.value$
-                                $priceSpecification.referenceQuantity.unitCode$
-                            </td>
+                            <td name="priceStr">$priceStr$</td>
                             <td name="priceSpecification.accounting.accountsReceivable">
                                 $priceSpecification.accounting.accountsReceivable$</td>
+                            <td name="categoryName">$categoryName$</td>
+                            <td name="id__availableAtOrFromCount">
+                                <a href="javascript:void(0)" class="showAvailableAtOrFrom" data-id="$id$">
+                                    表示
+                                </a>
+                            </td>
                             <td
                                 name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss__validRateLimitStr">
                                 $validFrom$ ~ $validThrough$<br>
@@ -154,11 +169,6 @@
                             </td>
                             <td name="id__showCatalogs">
                                 <a href="javascript:void(0)" class="showCatalogs" data-id="$id$">
-                                    表示
-                                </a>
-                            </td>
-                            <td name="id__availableAtOrFromCount">
-                                <a href="javascript:void(0)" class="showAvailableAtOrFrom" data-id="$id$">
                                     表示
                                 </a>
                             </td>
