--- a/views/accountTitles/index.ejs
+++ b/views/accountTitles/index.ejs
@@ -29,7 +29,7 @@ AT-01
                             <%- include('../common/master/_hidden') %>
 
                             <div class="form-row">
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="inCodeSet[inCodeSet][codeValue]" class="bmd-label-static">
                                         科目分類
                                     </label>
@@ -43,7 +43,7 @@ AT-01
                                         <% } %>
                                     </select>
                                 </div>
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="inCodeSet[codeValue]" class="bmd-label-static">
                                         科目
                                     </label>
@@ -57,12 +57,19 @@ AT-01
                                         <% } %>
                                     </select>
                                 </div>
-                                <div class="form-group bmd-form-group col-md-3">
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label for="codeValue" class="bmd-label-static">
                                         コード
                                     </label>
                                     <input type="text" class="form-control" name="codeValue" id="codeValue"
                                         placeholder="" maxlength=64 value="">
+                                </div>
+                                <div class="form-group bmd-form-group col-md-2">
+                                    <label for="name" class="bmd-label-static">
+                                        名称
+                                    </label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder=""
+                                        maxlength=64 value="">
                                 </div>
                             </div>
                         </form>
