- イベント作成時の施設コンテンツを動的選択肢に変更

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -31,10 +31,10 @@
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-3">
-                                    <label class="bmd-label-static" for="screen">コンテンツ
-                                        <span class="text-danger">＊</span></label>
-                                    <select class="form-control" name="screeningEventSeriesId">
-                                        <option value="">施設を選択してください</option>
+                                    <label for="superEvent" class="bmd-label-static">
+                                        施設コンテンツ <span class="text-danger">＊</span>
+                                    </label>
+                                    <select class="form-control" name="superEvent" id="superEvent" style="width: 100%;">
                                     </select>
                                 </div>
 
